FEAT first section in main + STYLE first section in main added

--- a/index.html
+++ b/index.html
@@ -46,27 +46,39 @@
                         </div>
                     </div>
                     <div class="text text-button">
-                        <button class="button">Scarica per Mac</button>
-                        <button class="button black">Apri Discord nel tuo browser</button>
+                        <button class="button"> 	
+                            &#8595; Scarica per Mac
+                        </button>
+                        <button class="button black">
+                            Apri Discord nel tuo browser
+                        </button>
                     </div>
             </section>
 
         </header>
     
         <main class="main-content">
-            <!-- <section class="section hero">
-                <div class="container-small">
-                    contenuto hero
-                </div>
-            </section> -->
+
             <section class="section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-60"></div>
-                        <div class="col-40"></div>
+                        <div class="col-60">
+                            <img src="img/item1.svg" alt="simil-chat study-group">
+                        </div>
+                        <div class="col-40">
+                            <div class="text-section">
+                                <h2 class="title-description">
+                                    Un luogo a invito con tutto lo spaio necessario per parlare
+                                </h2>
+                                <div class="text-description">
+                                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemenete parlare della tua giornata senza intasare una chat di gruppo.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+
             <section class="section bg-gray">
                 <div class="container">
                 <div class="row row-reverse">
@@ -75,6 +87,7 @@
                     </div>
                 </div>
             </section>
+
             <section class="section">
                 <div class="container">
                     <div class="row">
@@ -92,6 +105,7 @@
                     </div>
                 </div>
             </section>
+
         </main>
     
         <footer class="page-content">
