--- a/index.html
+++ b/index.html
@@ -81,18 +81,40 @@
 
             <section class="section bg-gray">
                 <div class="container">
-                <div class="row row-reverse">
-                        <div class="col-60"></div>
-                        <div class="col-40"></div>
-                    </div>
-                </div>
+                   <div class="row row-reverse">
+                        <div class="col-60">
+                            <img src="img/item2.svg" alt="simil-chatvocal">
+                        </div>
+                        <div class="col-40">
+                            <div class="text-section">
+                                <h2 class="title-description">
+                                   Dove trovarsi é facile
+                                </h2>
+                                <div class="text-description">
+                                    Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                                </div>
+                            </div>
+                       </div>
+                   </div>
+                </div>    
             </section>
 
             <section class="section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-60"></div>
-                        <div class="col-40"></div>
+                        <div class="col-60">
+                            <img src="img/item3.svg" alt="simil-chat list-coach">
+                        </div>
+                        <div class="col-40">
+                            <div class="text-section">
+                                <h2 class="title-description">
+                                   Da pochi a un fandom
+                                </h2>
+                                <div class="text-description">
+                                   Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -101,6 +123,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-100 green">
+                            <div class="text-section">
+                                <h2 class="title-description">
+                                   Tecnologia affidabile per tenersi in contatto
+                                </h2>
+                                <div class="text-description">
+                                  Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                                </div>
+                            </div>
+                            <img src="img/item4-big.svg" alt="Video-call">
                         </div>
                     </div>
                 </div>
