FEAT "./img.jpg" added.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-60">
-                            <img src="img/item1.svg" alt="simil-chat study-group">
+                            <img src="./img/item1.svg" alt="simil-chat study-group">
                         </div>
                         <div class="col-40">
                             <div class="text-section">
@@ -83,7 +83,7 @@
                 <div class="container">
                    <div class="row row-reverse">
                         <div class="col-60">
-                            <img src="img/item2.svg" alt="simil-chatvocal">
+                            <img src="./img/item2.svg" alt="simil-chatvocal">
                         </div>
                         <div class="col-40">
                             <div class="text-section">
@@ -103,7 +103,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-60">
-                            <img src="img/item3.svg" alt="simil-chat list-coach">
+                            <img src="./img/item3.svg" alt="simil-chat list-coach">
                         </div>
                         <div class="col-40">
                             <div class="text-section">
@@ -131,7 +131,7 @@
                                   Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                                 </div>
                             </div>
-                            <img src="img/item4-big.svg" alt="Video-call">
+                            <img src="/.img/item4-big.svg" alt="Video-call">
                             <svg width="500" height="30" viewBox="0 0 531 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M527.098 15.0977L530.701 13.5155C530.789 13.4276 530.789 13.3397 530.701 13.3397L527.098 11.7576L525.428 8.06592C525.428 7.97803 525.34 7.97803 525.34 8.06592L523.67 11.6697L520.066 13.3397C519.978 13.3397 519.978 13.4276 520.066 13.5155L523.67 15.0977L525.34 18.7015H525.428L527.098 15.0977Z" fill="#6ADBC6"/>
                                 <path opacity="0.5" d="M303.575 6.4L306.975 4.9V4.7L303.575 3.3L302.075 0H301.875L300.375 3.3L297.075 4.7C296.975 4.8 296.975 4.9 297.075 4.9L300.375 6.4L301.875 9.8H302.075L303.575 6.4Z" fill="#9691FF"/>
@@ -157,10 +157,18 @@
                     <div class="row">
                         <div class="col-33">
                             <ul>
-                                <li>link</li>
-                                <li>link</li>
-                                <li>link</li>
-                                <li>link</li>
+                                <li>
+                                    Il tuo posto per parlare
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <img src="./img/ita.png" alt="bandiera italia">
+                                    </div>
+                                    italiano  &#748; 
+                                </li>
+                                <li>
+
+                                </li>
                             </ul>
                         </div>
                         <div class="col-16">
