FEAT icons-social added + STYLE

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord-layout></title>
     <link rel="stylesheet" href="./css/app.css">
+    <!-- link icone social -->
+    <link href='https://css.gg/instagram.css' rel='stylesheet'>
+    <link href='https://css.gg/twitter.css' rel='stylesheet'>
+    <link href='https://css.gg/facebook.css' rel='stylesheet'>
+    <link href='https://css.gg/youtube.css' rel='stylesheet'>
 </head>
 <body class="debug-">
         <header class="main-header">
@@ -167,8 +172,12 @@
                                     </div> 
                                     Italiano  &#748; 
                                 </li>
-                                <li>
+                                <li class="social margin-top">
                                    <!-- icone -->
+                                   <i class="gg-twitter size-icon"></i>
+                                   <i class="gg-instagram size-icon"></i>
+                                   <i class="gg-facebook size-icon"></i>
+                                   <i class="gg-youtube size-icon"></i>
                                 </li>
                             </ul>
                         </div>
