--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord-layout></title>
+    <title>Discord-layout </title>
     <link rel="stylesheet" href="./css/app.css">
     <!-- link icone social -->
     <link href='https://css.gg/instagram.css' rel='stylesheet'>
     <link href='https://css.gg/twitter.css' rel='stylesheet'>
     <link href='https://css.gg/facebook.css' rel='stylesheet'>
     <link href='https://css.gg/youtube.css' rel='stylesheet'>
+    <!-- link font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body class="debug-">
         <header class="main-header">
